# gameboy-emu

./: Cargo.toml  README.md  flake.nix  index.html  shell.nix
roms/: tloz-dx.gb
src/: emulator.rs  hardware.rs  lib.rs  main.rs
src/hardware/: cartridge.rs  cpu.rs  display.rs  emu_display.rs  gameboy.rs  instructions.rs  memory.rs  registers.rs
