[package]
name = "gameboy_hw"
version = "0.1.0"
authors = ["Scott Vo hscottvo@gmail.com"]
licence = "MIT/Apache-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4.26"
env_logger = "0.11.6"
sdl3 = { version = "0", features = [] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
  "Window",
  "Document",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "ImageData",
] }
js-sys = "0.3"

[dev-dependencies]
wasm-bindgen-cli = "0.2"
