[package]
name = "gameboy_hw"
version = "0.1.0"
authors = ["Scott Vo hscottvo@gmail.com"]
license = "MIT/Apache-2.0"
edition = "2021"

[lib]
name = "gameboy"
path = "src/lib.rs"


[dependencies]
minifb = "0.28.0"
tokio = { version = "1.45.0", features = ["full"] }
tokio-util = "0.7.15"
tracing = "0.1.41"
